--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "eslint": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.3",
     "vue": "^2.6.10",
     "vue-native-websocket": "^2.0.13",
     "vuex": "^3.1.1"
@@ -17,6 +19,7 @@
     "@vue/cli-plugin-eslint": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
     "@vue/eslint-config-prettier": "^3.0.5",
+    "babel-eslint": "^10.0.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
