--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "eslint": "^5.0.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "vue": "^2.6.10",
-    "vue-native-websocket": "^2.0.13",
-    "vuex": "^3.1.1"
+    "eslint": "5",
+    "eslint-plugin-vue": "5",
+    "vue": "2",
+    "vue-native-websocket": "2",
+    "vuex": "3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.10.0",
-    "@vue/cli-plugin-eslint": "^3.10.0",
-    "@vue/cli-service": "^3.10.0",
-    "@vue/eslint-config-prettier": "^3.0.5",
-    "babel-eslint": "^10.0.3",
-    "vue-template-compiler": "^2.6.10"
+    "@vue/cli-plugin-babel": "3",
+    "@vue/cli-plugin-eslint": "3",
+    "@vue/cli-service": "3",
+    "@vue/eslint-config-prettier": "3",
+    "babel-eslint": "10",
+    "vue-template-compiler": "2"
   },
   "eslintConfig": {
     "root": true,
