--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "core-js": "^3.4.4",
     "eslint": "5",
     "eslint-plugin-vue": "5",
     "vue": "2",
@@ -15,9 +16,9 @@
     "vuex": "3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3",
-    "@vue/cli-plugin-eslint": "3",
-    "@vue/cli-service": "3",
+    "@vue/cli-plugin-babel": "^4.1.2",
+    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-service": "^4.1.2",
     "@vue/eslint-config-prettier": "3",
     "babel-eslint": "10",
     "vue-template-compiler": "2"
