--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,12 @@ jobs:
           GOOS=linux GOARCH=amd64 packr build -o ../../release/ssl-vision-client_linux_amd64
           GOOS=darwin GOARCH=amd64 packr build -o ../../release/ssl-vision-client_darwin_amd64
           GOOS=windows GOARCH=amd64 packr build -o ../../release/ssl-vision-client_windows_amd64.exe
+    - run:
+        working_directory: cmd/ssl-vision-cli
+        command: |
+          GOOS=linux GOARCH=amd64 go build -o ../../release/ssl-vision-cli_linux_amd64
+          GOOS=darwin GOARCH=amd64 go build -o ../../release/ssl-vision-cli_darwin_amd64
+          GOOS=windows GOARCH=amd64 go build -o ../../release/ssl-vision-cli_windows_amd64.exe
     - persist_to_workspace:
         root: .
         paths:
@@ -52,6 +58,9 @@ jobs:
           mv ssl-vision-client_linux_amd64 ssl-vision-client_${CIRCLE_TAG}_linux_amd64
           mv ssl-vision-client_darwin_amd64 ssl-vision-client_${CIRCLE_TAG}_darwin_amd64
           mv ssl-vision-client_windows_amd64.exe ssl-vision-client_${CIRCLE_TAG}_windows_amd64.exe
+          mv ssl-vision-cli_linux_amd64 ssl-vision-cli_${CIRCLE_TAG}_linux_amd64
+          mv ssl-vision-cli_darwin_amd64 ssl-vision-cli_${CIRCLE_TAG}_darwin_amd64
+          mv ssl-vision-cli_windows_amd64.exe ssl-vision-cli_${CIRCLE_TAG}_windows_amd64.exe
     - run:
         name: "Publish Release on GitHub"
         command: |
