--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
 .DS_Store
 node_modules
-/dist
+/config/
+
+# Editor directories and files
+.idea/*
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
+!.idea/runConfigurations
 
 # local env files
 .env.local
@@ -11,11 +21,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
+# app-specific ignores
+/*.json.stream
+
+# Local installations
+/.local
+
+# Make cache
+/.frontend
