--- a/cmd/ssl-vision-client/Dockerfile
+++ b/cmd/ssl-vision-client/Dockerfile
@@ -9,13 +9,12 @@ ARG cmd=ssl-vision-client
 WORKDIR work
 COPY . .
 COPY --from=build_node frontend/dist frontend/dist
-RUN go install -v ./cmd/${cmd}
+RUN go install ./cmd/${cmd}
 
 # Start fresh from a smaller image
 FROM alpine:3
-ARG cmd
+ARG cmd=ssl-vision-client
 COPY --from=build_go /go/bin/${cmd} /app/${cmd}
-RUN mkdir -p config && chown -R 1000: config
 USER 1000
 ENV COMMAND="/app/${cmd}"
 ENTRYPOINT "${COMMAND}"
