--- a/cmd/ssl-vision-cli/Dockerfile
+++ b/cmd/ssl-vision-cli/Dockerfile
@@ -2,13 +2,12 @@ FROM golang:1.20-alpine AS build_go
 ARG cmd=ssl-vision-cli
 WORKDIR work
 COPY . .
-RUN go install -v ./cmd/${cmd}
+RUN go install ./cmd/${cmd}
 
 # Start fresh from a smaller image
 FROM alpine:3
 ARG cmd=ssl-vision-cli
-COPY --from=build_go /go/bin/${cmd} /app/${cmd}
+COPY --from=build_go /go/bin/${cmd} /app
 USER 1000
-ENV COMMAND="/app/${cmd}"
-ENTRYPOINT "${COMMAND}"
+ENTRYPOINT ["/app"]
 CMD []
