--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,11 @@
   "extends": [
     "config:base",
     "schedule:yearly"
-  ]
+  ],
+  "labels": [
+    "dependencies"
+  ],
+  "npm": {
+    "enabled": false
+  }
 }
