--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@bufbuild/protobuf": "^2.2.5",
+    "@vueuse/core": "^13.1.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
